# negotiation-spec-experiment

./: .gitignore  2026aq.bib  AGENTS.md  CITATION.cff  CITATIONS.md  CONTRIBUTORS.yaml  DATA_AVAILABILITY.md  DATA_MANIFEST.yaml  EXPERIMENT_DESIGN.md  EXTENSION_DESIGN.md  GLOSSARY.md  LOGGING_AND_PROVENANCE_STANDARD.md  ONTOLOGY.yaml  PILOT_GATE_AUDIT.md  PREREGISTRATION.md  PREREGISTRATION_STUDY2.md  PROVENANCE.yaml  README.md  SPINE.yaml  STUDY2_RATIONALE.md  negotiation_spec_2026.bib  paper.md  paper.yaml  pyproject.toml  reproduce.sh
code/: analyze.py  backfill_scores.py  build_hf_dataset.py  compute_headroom.py  compute_icc.py  gen_headroom_variants.py  make_manifest.py  negotiation_runner.py  osf_publish.py  outcomes.py  provider_errors.py  rescore_transcripts.py  run_experiment.py  scoring_llm.py  test_icc.py  test_outcomes.py  test_robustness.py
data/: outcomes.csv
data_ablation_full/: outcomes.csv
data_frontier/: outcomes.csv
data_haiku/: outcomes.csv
data_headroom/: outcomes.csv
data_paraphrase/: outcomes.csv
data_study2/: outcomes.csv
prompts/: COT_ONLY.txt  COT_ONLY_p1.txt  COT_ONLY_p2.txt  COT_ONLY_p3.txt  COT_ONLY_p4.txt  DOMINANCE.txt  NEUTRAL.txt  NEUTRAL_p1.txt  NEUTRAL_p2.txt  NEUTRAL_p3.txt  NEUTRAL_p4.txt  PROMPT_HASHES.txt  SCORING_SVI.txt  SCORING_WARMTH_DOMINANCE.txt  SPEC_COT.txt  SPEC_NOCOT.txt  SPEC_NOCOT_p1.txt  SPEC_NOCOT_p2.txt  SPEC_NOCOT_p3.txt  SPEC_NOCOT_p4.txt  SPEC_NOLOGROLL.txt  WARMTH.txt  WARMTH_p1.txt  WARMTH_p2.txt  WARMTH_p3.txt  WARMTH_p4.txt  harness_preface.txt  hash_prompts.py
scenarios/: README.md  chair.yaml  (+2 more)
(+10 files in other folders)
